# ARCANEE

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
_blueprint/: id_registry.yaml  migration_intake.md  upgrade_intake.md
_blueprint/knowledge/: GPU_APIs_rules.md  blueprint_schema.md  ci_reference.md  cmake_playbook.md  code_style_and_tooling.md  cpp_api_abi_rules.md  cr_template.md  decision_log_template.md  dependency_policy.md  error_handling_playbook.md  implementation_checklist_schema.md  knowledge_index.md  knowledge_manifest.md  logging_observability_policy_new.md  multibackend_graphics_abstraction_rules.md  performance_benchmark_harness.md  prompt meta rules v1 1.md  repo_layout_and_targets.md  temp_dbg_policy.md  testing_strategy.md  walkthrough_template.md
_blueprint/project/: ch0.md  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md  decision_delta_log.md  decision_log.md  implementation_checklist.yaml  walkthrough.md
_blueprint/rules/: ci_gates.yaml
_blueprint/tools/: check_answers.py  check_headers.py  compose_validate.py  fix_headers.py
_blueprint/v0.1/: ch0.md  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md
_blueprint/v0.2/: ch0.md  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  ch8.md  ch9.md
blueprint/: blueprint_v0.1_ch0.md  blueprint_v0.1_ch1.md  blueprint_v0.1_ch2.md  blueprint_v0.1_ch3.md  blueprint_v0.1_ch4.md  blueprint_v0.1_ch5.md  blueprint_v0.1_ch6.md  blueprint_v0.1_ch7.md  blueprint_v0.1_ch8.md  blueprint_v0.1_ch9.md  blueprint_v0.2_ch0.md  blueprint_v0.2_ch1.md  blueprint_v0.2_ch2.md  blueprint_v0.2_ch3.md  blueprint_v0.2_ch4.md  blueprint_v0.2_ch5.md  blueprint_v0.2_ch6.md  blueprint_v0.2_ch7.md  blueprint_v0.2_ch8.md  blueprint_v0.2_ch9.md  blueprint_v0.3_ch0.md  blueprint_v0.3_ch1.md  blueprint_v0.3_ch2.md  blueprint_v0.3_ch3.md  blueprint_v0.3_ch4.md  blueprint_v0.3_ch5.md  blueprint_v0.3_ch6.md  blueprint_v0.3_ch7.md  blueprint_v0.3_ch8.md  blueprint_v0.3_ch9.md  decision_delta_log.md  decision_log.md  implementation_checklist.yaml  migration_intake.md  upgrade_intake.md  walkthrough.md
cmake/: FindPhysFS.cmake  FindSDL2.cmake  patch_common_deps.sh  patch_diligent_core.sh  patch_diligent_tools.sh  patch_pcre2.sh  patch_squirrel.sh
config/: color-schemes.toml  editor.toml  gui.toml  keys.toml
specs/: Appendix A — Complete Public API Reference (ARCANEE v0.1).md  Appendix B — Enums, Constants, and Mappings (ARCANEE v0.1).md  Appendix C — Example Reference Cartridges (Formal Descriptions) (ARCANEE v0.1).md  Appendix D — Recommended Internal C++ Module Boundaries and File Layout (ARCANEE v0.1).md  Appendix E — Rendering Formats, Alpha, and Color Space Policy (Normative Choices and Rationale) (ARCANEE v0.1).md  Appendix F — Debugger and Step Execution Specification (Dev Mode) (ARCANEE v0.1).md  Appendix G — Distribution Packaging and Export Format (ARCANEE v0.1).md  Appendix H — Specification Clarifications and Developer Disambiguation.md  Chapter 1 — Scope, Goals, Definitions, and Non-Goals.md  Chapter 10 — Workbench UX, Hot Reload, Debugging, and Profiling (ARCANEE v0.1).md  Chapter 11 — Error Handling, Logging, and Diagnostics (ARCANEE v0.1).md  Chapter 12 — Performance Budgets, Limits, and Compliance Tests (ARCANEE v0.1).md  Chapter 2 — System Architecture Overview (ARCANEE v0.1).md  Chapter 3 — Cartridge Format, VFS, Permissions, and Sandbox (ARCANEE v0.1).md  Chapter 4 — Execution Model and Squirrel Integration (ARCANEE v0.1).md  Chapter 5 — Rendering Architecture (CBUF, Present Modes, Integer Scaling, Formats, and Passes) (ARCANEE v0.1).md  Chapter 6 — 2D Canvas API (ThorVG-backed) (ARCANEE v0.1).md  Chapter 6B — Extended 2D Canvas API Specification (ThorVG Retained Model).md  Chapter 7 — 3D Scene API and Rendering Model (Diligent-based) (ARCANEE v0.1).md  Chapter 7B — Extended 3D Scene API Specification (DiligentEngine Retained Model).md  Chapter 8 — Audio System and API (Tracker Modules via libopenmpt, SFX Mixing) (ARCANEE v0.1).md  Chapter 8B — Extended Audio System Specification (libopenmpt + Mixer Architecture).md  Chapter 9 — Input System and API (SDL2-backed, Deterministic Snapshots) (ARCANEE v0.1).md
src/: CMakeLists.txt
src/app/: Runtime.cpp  Runtime.h  Workbench.cpp  Workbench.h  main.cpp
src/audio/: AudioDevice.cpp  AudioDevice.h  AudioManager.cpp  AudioManager.h  AudioQueue.h  ModulePlayer.cpp  ModulePlayer.h  SfxMixer.cpp  SfxMixer.h
src/common/: Assert.h  Log.h  Random.h  Status.h  Types.h  Version.h.in
src/ide/: CMakeLists.txt  DapClient.cpp  DapClient.h  DocumentSystem.cpp  DocumentSystem.h  LspClient.cpp  LspClient.h  ParseService.cpp  ParseService.h  ProjectSystem.cpp  ProjectSystem.h  SearchService.cpp  SearchService.h  TaskRunner.cpp  TaskRunner.h  TextBuffer.cpp  TextBuffer.h  TimelineStore.cpp  TimelineStore.h  UIShell.cpp  UIShell.h
src/ide/config/: ConfigSchema.cpp  ConfigSchema.h  ConfigSnapshot.h  ConfigSystem.cpp  ConfigSystem.h  Keymap.cpp  Keymap.h  ThemeSystem.cpp  ThemeSystem.h
src/input/: InputManager.cpp  InputManager.h  InputState.h
src/platform/: FontLocator.h  FontLocator_linux.cpp  Platform.cpp  Platform.h  Time.cpp  Time.h  Window.cpp  Window.h
src/render/: CBufPresets.h  Canvas2D.cpp  Canvas2D.h  CanvasState.h  Framebuffer.cpp  Framebuffer.h  PresentMode.h  PresentPass.cpp  PresentPass.h  RenderDevice.cpp  RenderDevice.h  RenderGraph.h  Viewport.h
src/runtime/: Cartridge.cpp  Cartridge.h  Manifest.cpp  Manifest.h
src/script/: BindingHelpers.cpp  BindingHelpers.h  BindingUtils.h  BreakpointStore.cpp  BreakpointStore.h  HandlePool.h  ScriptDebugger.cpp  ScriptDebugger.h  ScriptEngine.cpp  ScriptEngine.h
src/script/api/: AudioBinding.cpp  AudioBinding.h  FsBinding.cpp  FsBinding.h  GfxBinding.cpp  GfxBinding.h  InputBinding.cpp  InputBinding.h  SysBinding.cpp  SysBinding.h
src/vfs/: Vfs.cpp  Vfs.h  VfsImpl.cpp
tests/: CMakeLists.txt  smoke_perf.py  test_audio_queue.cpp  test_determinism_replay.cpp  test_render_smoke.cpp  test_script_safety.cpp  test_vfs_sandbox.cpp
utils/: gen_wav.py
(+56 files in other folders)
