# ARCANEE - Modern Fantasy Console
# Copyright (C) 2025 Michele Fabbri
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

cmake_minimum_required(VERSION 3.16)

project(ARCANEE
    VERSION 0.1.0
    DESCRIPTION "Modern Fantasy Console Runtime"
    LANGUAGES C CXX)

# Enforce C++17 Standard (Normative Requirement per Chapter 1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Setup dependency finding module path if needed
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

# Find required packages
find_package(PkgConfig REQUIRED)
find_package(SDL2 REQUIRED)
find_package(PhysFS REQUIRED)
find_package(Python3 COMPONENTS Interpreter REQUIRED)

# FetchContent for Dependencies
include(FetchContent)

# Squirrel Scripting Language
FetchContent_Declare(
    squirrel
    GIT_REPOSITORY https://github.com/albertodemichelis/squirrel.git
    GIT_TAG        v3.2
    PATCH_COMMAND "${CMAKE_SOURCE_DIR}/cmake/patch_squirrel.sh"
)

# Configure Squirrel options
set(DISABLE_DYNAMIC ON CACHE BOOL "Force static build for Squirrel" FORCE)
set(DISABLE_STATIC OFF CACHE BOOL "Enable static build for Squirrel" FORCE)
# Disable installer to prevent export errors
set(SQ_DISABLE_INSTALLER ON CACHE BOOL "Disable Squirrel install rules" FORCE)
set(SQ_DISABLE_HEADER_INSTALLER ON CACHE BOOL "Disable header install" FORCE)
set(SQ_DISABLE_CMAKE_INSTALLER ON CACHE BOOL "Disable cmake config install" FORCE)

FetchContent_MakeAvailable(squirrel)

# Diligent Engine (Core only - Tools/FX have broken relative includes)
set(DILIGENT_BUILD_SAMPLES OFF CACHE BOOL "Disable Diligent Samples" FORCE)
set(DILIGENT_BUILD_TESTS OFF CACHE BOOL "Disable Diligent Tests" FORCE)
set(DILIGENT_NO_FORMATTING ON CACHE BOOL "Disable clang-format" FORCE)

FetchContent_Declare(
    DiligentCore
    GIT_REPOSITORY https://github.com/DiligentGraphics/DiligentCore.git
    GIT_TAG        v2.5.5
)

FetchContent_MakeAvailable(DiligentCore)

# ThorVG - 2D Vector Graphics Engine
# ThorVG uses Meson, so we build it manually from source
FetchContent_Declare(
    thorvg
    GIT_REPOSITORY https://github.com/thorvg/thorvg.git
    GIT_TAG        v0.15.6
)

FetchContent_GetProperties(thorvg)
if(NOT thorvg_POPULATED)
    FetchContent_Populate(thorvg)
endif()

# libopenmpt - Tracker Module Player (system library via pkg-config)
pkg_check_modules(LIBOPENMPT libopenmpt)
if(NOT LIBOPENMPT_FOUND)
    message(WARNING "libopenmpt not found. Install libopenmpt-dev for audio module support.")
else()
    add_compile_definitions(HAS_LIBOPENMPT)
endif()

# Build ThorVG as static library from source
# First, create the config.h that Meson would generate
set(THORVG_CONFIG_H "${CMAKE_CURRENT_BINARY_DIR}/thorvg_config/config.h")
file(WRITE ${THORVG_CONFIG_H} "// ThorVG config.h generated by CMake
#pragma once

// Engine configuration - Software only for ARCANEE v0.1
#define THORVG_SW_RASTER_SUPPORT 1

// Loader configuration
#define THORVG_SVG_LOADER_SUPPORT 1

// Version info
#define THORVG_VERSION_STRING \"0.15.6\"
")

file(GLOB_RECURSE THORVG_COMMON_SOURCES "${thorvg_SOURCE_DIR}/src/common/*.cpp")
# Only include renderer core files, not sub-engine directories
file(GLOB THORVG_RENDERER_SOURCES "${thorvg_SOURCE_DIR}/src/renderer/*.cpp")
# Include only SW engine (software rasterizer)
file(GLOB_RECURSE THORVG_SW_ENGINE_SOURCES "${thorvg_SOURCE_DIR}/src/renderer/sw_engine/*.cpp")
file(GLOB_RECURSE THORVG_LOADERS_SOURCES 
    "${thorvg_SOURCE_DIR}/src/loaders/svg/*.cpp"
    "${thorvg_SOURCE_DIR}/src/loaders/raw/*.cpp"
)

add_library(thorvg_static STATIC
    ${THORVG_COMMON_SOURCES}
    ${THORVG_RENDERER_SOURCES}
    ${THORVG_SW_ENGINE_SOURCES}
    ${THORVG_LOADERS_SOURCES}
)

target_include_directories(thorvg_static PUBLIC
    "${thorvg_SOURCE_DIR}/inc"
)

target_include_directories(thorvg_static PRIVATE
    "${CMAKE_CURRENT_BINARY_DIR}/thorvg_config"  # For config.h
    "${thorvg_SOURCE_DIR}/src/common"
    "${thorvg_SOURCE_DIR}/src/renderer"
    "${thorvg_SOURCE_DIR}/src/renderer/sw_engine"
    "${thorvg_SOURCE_DIR}/src/loaders/svg"
    "${thorvg_SOURCE_DIR}/src/loaders/raw"
)

target_compile_definitions(thorvg_static PRIVATE
    TVG_STATIC
)

# Suppress warnings from ThorVG source
if(NOT MSVC)
    target_compile_options(thorvg_static PRIVATE -w)
endif()

set_property(TARGET thorvg_static PROPERTY POSITION_INDEPENDENT_CODE ON)

# Workaround for upstream CMake bug in sq/CMakeLists.txt where it tries to alias 'sq' even if static
# We can't easily patch the file, but by disabling dynamic we avoid half the issue.
# The error `alias target "squirrel::interpreter_static" because target "sq" does not already exist`
# suggests a copy-paste error in upstream where it aliases `sq` instead of `sq_static` for the static target.
# Since we only need the library, we can prevent 'sq' app form building at all if possible,
# or just tolerate it.

# Actually, the upstream bug is:
# add_executable(squirrel::interpreter_static ALIAS sq)
# It should be ALIAS sq_static.
# To fix this without patching, we can define the target `sq` manually as a dummy if needed,
# OR simpler: we use PATCH_COMMAND to fix the file.


# Ensure Position Independent Code if linking into shared libs or just for safety
set_property(TARGET squirrel_static PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET sqstdlib_static PROPERTY POSITION_INDEPENDENT_CODE ON)

# Add source directory
add_subdirectory(src)
add_subdirectory(tests)

# CI/Compliance Gates
add_custom_target(
    check_no_temp_dbg
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_no_temp_dbg.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Checking for forbidden TEMP-DBG markers..."
    VERBATIM
)

add_custom_target(
    check_blueprint_consistency
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_blueprint_consistency.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Verifying blueprint consistency and requirements traceability..."
    VERBATIM
)

