# ARCANEE - Modern Fantasy Console
# Copyright (C) 2025 Michele Fabbri
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

cmake_minimum_required(VERSION 3.16)

project(ARCANEE
    VERSION 0.1.0
    DESCRIPTION "Modern Fantasy Console Runtime"
    LANGUAGES C CXX)

# Enforce C++17 Standard (Normative Requirement per Chapter 1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Setup dependency finding module path if needed
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

# Find required packages
find_package(PkgConfig REQUIRED)
find_package(SDL2 REQUIRED)
find_package(PhysFS REQUIRED)
find_package(Python3 COMPONENTS Interpreter REQUIRED)

# FetchContent for Dependencies
include(FetchContent)

# Squirrel Scripting Language
FetchContent_Declare(
    squirrel
    GIT_REPOSITORY https://github.com/albertodemichelis/squirrel.git
    GIT_TAG        v3.2
    PATCH_COMMAND "${CMAKE_SOURCE_DIR}/cmake/patch_squirrel.sh"
)

# Configure Squirrel options
set(DISABLE_DYNAMIC ON CACHE BOOL "Force static build for Squirrel" FORCE)
set(DISABLE_STATIC OFF CACHE BOOL "Enable static build for Squirrel" FORCE)
# Disable installer to prevent export errors
set(SQ_DISABLE_INSTALLER ON CACHE BOOL "Disable Squirrel install rules" FORCE)
set(SQ_DISABLE_HEADER_INSTALLER ON CACHE BOOL "Disable header install" FORCE)
set(SQ_DISABLE_CMAKE_INSTALLER ON CACHE BOOL "Disable cmake config install" FORCE)

FetchContent_MakeAvailable(squirrel)

# Diligent Engine (Core only - Tools/FX have broken relative includes)
set(DILIGENT_BUILD_SAMPLES OFF CACHE BOOL "Disable Diligent Samples" FORCE)
set(DILIGENT_BUILD_TESTS OFF CACHE BOOL "Disable Diligent Tests" FORCE)
set(DILIGENT_NO_FORMATTING ON CACHE BOOL "Disable clang-format" FORCE)

FetchContent_Declare(
    DiligentCore
    GIT_REPOSITORY https://github.com/DiligentGraphics/DiligentCore.git
    GIT_TAG        v2.5.5
)

FetchContent_MakeAvailable(DiligentCore)

# Diligent Tools (Imgui, TextureLoader, etc.)
set(DILIGENT_BUILD_IMGUI ON CACHE BOOL "Build Diligent ImGui" FORCE)
set(DILIGENT_BUILD_RENDER_STATE_NOTATION OFF CACHE BOOL "Disable RSN" FORCE)
set(DILIGENT_BUILD_ASSET_LOADER OFF CACHE BOOL "Disable Asset Loader" FORCE)
set(DILIGENT_BUILD_GLTF_LOADER OFF CACHE BOOL "Disable GLTF Loader" FORCE)
FetchContent_Declare(
    DiligentTools
    GIT_REPOSITORY https://github.com/DiligentGraphics/DiligentTools.git
    GIT_TAG        v2.5.5
    PATCH_COMMAND sh -c "sed -i 's/add_subdirectory(RenderStateNotation)/#&/' CMakeLists.txt && sed -i 's/add_subdirectory(NativeApp)/#&/' CMakeLists.txt && sed -i 's/add_subdirectory(HLSL2GLSLConverter)/#&/' CMakeLists.txt && sed -i 's/add_subdirectory(RenderStatePackager)/#&/' CMakeLists.txt && sed -i 's/target_link_libraries(Diligent-Imgui PRIVATE XCBKeySyms)/#&/' Imgui/CMakeLists.txt"
)

FetchContent_MakeAvailable(DiligentTools)

# Suppress warnings in Diligent-Imgui (imGuIZMO)
if(TARGET Diligent-Imgui)
    if(NOT MSVC)
        target_compile_options(Diligent-Imgui PRIVATE -w)
    endif()
endif()

# ThorVG - 2D Vector Graphics Engine
# ThorVG uses Meson, so we build it manually from source
FetchContent_Declare(
    thorvg
    GIT_REPOSITORY https://github.com/thorvg/thorvg.git
    GIT_TAG        v0.15.6
)

FetchContent_GetProperties(thorvg)
if(NOT thorvg_POPULATED)
    FetchContent_Populate(thorvg)
endif()

# libopenmpt - Tracker Module Player (system library via pkg-config)
pkg_check_modules(LIBOPENMPT libopenmpt)
if(NOT LIBOPENMPT_FOUND)
    message(WARNING "libopenmpt not found. Install libopenmpt-dev for audio module support.")
else()
    add_compile_definitions(HAS_LIBOPENMPT)
endif()

# Build ThorVG as static library from source
# First, create the config.h that Meson would generate
set(THORVG_CONFIG_H "${CMAKE_CURRENT_BINARY_DIR}/thorvg_config/config.h")
file(WRITE ${THORVG_CONFIG_H} "// ThorVG config.h generated by CMake
#pragma once

// Engine configuration - Software only for ARCANEE v0.1
#define THORVG_SW_RASTER_SUPPORT 1

// Loader configuration
#define THORVG_SVG_LOADER_SUPPORT 1

// Version info
#define THORVG_VERSION_STRING \"0.15.6\"
")

file(GLOB_RECURSE THORVG_COMMON_SOURCES "${thorvg_SOURCE_DIR}/src/common/*.cpp")
# Only include renderer core files, not sub-engine directories
file(GLOB THORVG_RENDERER_SOURCES "${thorvg_SOURCE_DIR}/src/renderer/*.cpp")
# Include only SW engine (software rasterizer)
file(GLOB_RECURSE THORVG_SW_ENGINE_SOURCES "${thorvg_SOURCE_DIR}/src/renderer/sw_engine/*.cpp")
file(GLOB_RECURSE THORVG_LOADERS_SOURCES 
    "${thorvg_SOURCE_DIR}/src/loaders/svg/*.cpp"
    "${thorvg_SOURCE_DIR}/src/loaders/raw/*.cpp"
)

add_library(thorvg_static STATIC
    ${THORVG_COMMON_SOURCES}
    ${THORVG_RENDERER_SOURCES}
    ${THORVG_SW_ENGINE_SOURCES}
    ${THORVG_LOADERS_SOURCES}
)

target_include_directories(thorvg_static PUBLIC
    "${thorvg_SOURCE_DIR}/inc"
)

target_include_directories(thorvg_static PRIVATE
    "${CMAKE_CURRENT_BINARY_DIR}/thorvg_config"  # For config.h
    "${thorvg_SOURCE_DIR}/src/common"
    "${thorvg_SOURCE_DIR}/src/renderer"
    "${thorvg_SOURCE_DIR}/src/renderer/sw_engine"
    "${thorvg_SOURCE_DIR}/src/loaders/svg"
    "${thorvg_SOURCE_DIR}/src/loaders/raw"
)

target_compile_definitions(thorvg_static PRIVATE
    TVG_STATIC
)

# Suppress warnings from ThorVG source
if(NOT MSVC)
    target_compile_options(thorvg_static PRIVATE -w)
endif()

set_property(TARGET thorvg_static PROPERTY POSITION_INDEPENDENT_CODE ON)

# Workaround for upstream CMake bug in sq/CMakeLists.txt where it tries to alias 'sq' even if static
# We can't easily patch the file, but by disabling dynamic we avoid half the issue.
# The error `alias target "squirrel::interpreter_static" because target "sq" does not already exist`
# suggests a copy-paste error in upstream where it aliases `sq` instead of `sq_static` for the static target.
# Since we only need the library, we can prevent 'sq' app form building at all if possible,
# or just tolerate it.

# Actually, the upstream bug is:
# add_executable(squirrel::interpreter_static ALIAS sq)
# It should be ALIAS sq_static.
# To fix this without patching, we can define the target `sq` manually as a dummy if needed,
# OR simpler: we use PATCH_COMMAND to fix the file.


# Ensure Position Independent Code if linking into shared libs or just for safety
set_property(TARGET squirrel_static PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET sqstdlib_static PROPERTY POSITION_INDEPENDENT_CODE ON)

# ==========================================
# v0.2 IDE Feature Flags [BUILD-08]
# ==========================================
option(ARCANEE_ENABLE_IDE "Enable Full IDE features (Workbench upgrade)" ON)
option(ARCANEE_ENABLE_LSP "Enable Squirrel LSP tool" ON)
option(ARCANEE_ENABLE_DAP "Enable DAP debug adapter" ON)
option(ARCANEE_ENABLE_TIMELINE "Enable Timeline local history" ON)
option(ARCANEE_ENABLE_TASKS "Enable Task Runner" ON)

if(ARCANEE_ENABLE_IDE)
    message(STATUS "Build: Full IDE Enabled")
endif()

# ==========================================
# v0.2 IDE Dependencies [BUILD-07]
# ==========================================

# tree-sitter (Core)
FetchContent_Declare(
    tree-sitter
    GIT_REPOSITORY https://github.com/tree-sitter/tree-sitter.git
    GIT_TAG        v0.20.9
)
FetchContent_GetProperties(tree-sitter)
if(NOT tree-sitter_POPULATED)
    FetchContent_Populate(tree-sitter)
    add_library(tree-sitter STATIC ${tree-sitter_SOURCE_DIR}/lib/src/lib.c)
    target_include_directories(tree-sitter PUBLIC ${tree-sitter_SOURCE_DIR}/lib/include)
    target_include_directories(tree-sitter PRIVATE ${tree-sitter_SOURCE_DIR}/lib/src)
    if(NOT MSVC)
        target_compile_options(tree-sitter PRIVATE -w)
    endif()
endif()

# tree-sitter-squirrel (Grammar)
FetchContent_Declare(
    tree-sitter-squirrel
    GIT_REPOSITORY https://github.com/tree-sitter-grammars/tree-sitter-squirrel.git
    GIT_TAG        v1.0.0
)
FetchContent_GetProperties(tree-sitter-squirrel)
if(NOT tree-sitter-squirrel_POPULATED)
    FetchContent_Populate(tree-sitter-squirrel)
    # The grammar repo usually has a src/parser.c and src/scanner.c (if external scanner used)
    # We compile them into a library.
    file(GLOB TS_SQUIRREL_SOURCES 
        "${tree-sitter-squirrel_SOURCE_DIR}/src/parser.c"
        "${tree-sitter-squirrel_SOURCE_DIR}/src/scanner.c"
    )
    add_library(tree-sitter-squirrel STATIC ${TS_SQUIRREL_SOURCES})
    target_include_directories(tree-sitter-squirrel PUBLIC "${tree-sitter-squirrel_SOURCE_DIR}/src")
    # Link against tree-sitter core headers if needed (usually just standard C)
    if(NOT MSVC)
        target_compile_options(tree-sitter-squirrel PRIVATE -w)
    endif()
endif()

# PCRE2 (Regex)
FetchContent_Declare(
    pcre2
    GIT_REPOSITORY https://github.com/PCRE2Project/pcre2.git
    GIT_TAG        pcre2-10.42
    CMAKE_ARGS     "-DPCRE2_BUILD_PCRE2_8=ON;-DPCRE2_BUILD_TESTS=OFF;-DPCRE2_BUILD_PCRE2GREP=OFF;-DBUILD_TESTING=OFF"
)
FetchContent_MakeAvailable(pcre2)

# SQLite (Timeline Metadata) - Use system SQLite3
find_package(SQLite3 REQUIRED)
if(NOT TARGET sqlite3)
    add_library(sqlite3 INTERFACE)
    target_include_directories(sqlite3 INTERFACE ${SQLite3_INCLUDE_DIRS})
    target_link_libraries(sqlite3 INTERFACE ${SQLite3_LIBRARIES})
endif()

# zstd (Compression)
FetchContent_Declare(
    zstd
    GIT_REPOSITORY https://github.com/facebook/zstd.git
    GIT_TAG        v1.5.5
    CMAKE_ARGS     -DZSTD_BUILD_PROGRAMS=OFF -DZSTD_BUILD_TESTS=OFF
)
FetchContent_GetProperties(zstd)
if(NOT zstd_POPULATED)
    FetchContent_Populate(zstd)
    add_subdirectory(${zstd_SOURCE_DIR}/build/cmake ${zstd_BINARY_DIR})
endif()

# xxHash (Dedup)
FetchContent_Declare(
    xxhash
    GIT_REPOSITORY https://github.com/Cyan4973/xxHash.git
    GIT_TAG        v0.8.2
    CMAKE_ARGS     -DXXHASH_BUILD_XXHSUM=OFF
)
FetchContent_MakeAvailable(xxhash)

# tomlplusplus (Config)
FetchContent_Declare(
    tomlplusplus
    GIT_REPOSITORY https://github.com/marzer/tomlplusplus.git
    GIT_TAG        v3.4.0
)
FetchContent_MakeAvailable(tomlplusplus)

# nlohmann_json (LSP/DAP)
FetchContent_Declare(
    json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG        v3.11.2
    CMAKE_ARGS     -DJSON_BuildTests=OFF
)
FetchContent_MakeAvailable(json)

# spdlog (Logging)
if(NOT TARGET spdlog)
    FetchContent_Declare(
        spdlog
        GIT_REPOSITORY https://github.com/gabime/spdlog.git
        GIT_TAG        v1.12.0
    )
    FetchContent_MakeAvailable(spdlog)
endif()

# Add source directory
add_subdirectory(src)
add_subdirectory(tests)

# CI/Compliance Gates
add_custom_target(
    check_no_temp_dbg
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_no_temp_dbg.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Checking for forbidden TEMP-DBG markers..."
    VERBATIM
)

add_custom_target(
    check_blueprint_consistency
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_blueprint_consistency.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Verifying blueprint consistency and requirements traceability..."
    VERBATIM
)

# check_no_na_without_dec (New)
add_custom_target(
    check_no_na_without_dec
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_no_na_without_dec.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Verifying no 'N/A' exists without '[DEC-XX]'..."
    VERBATIM
)

# check_req_has_test_and_checklist (New)
add_custom_target(
    check_req_has_test_and_checklist
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_req_has_test_and_checklist.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Verifying Requirements <-> Tests <-> Checklist traceability..."
    VERBATIM
)

# check_inherit_targets (New)
add_custom_target(
    check_inherit_targets
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_SOURCE_DIR}/tools/ci/check_inherit_targets.py" "${CMAKE_SOURCE_DIR}"
    COMMENT "Verifying inheritance targets..."
    VERBATIM
)

# arcanee_assets_verify [BUILD-16]
add_custom_target(
    arcanee_assets_verify
    # Ensure assets are in bin for verification
    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/assets" "${CMAKE_BINARY_DIR}/bin/assets"
    COMMAND ${CMAKE_COMMAND} -E echo "Checking assets exist..."
    # Portable check? "test" is unix. PowerShell/CMD distinct.
    # CMake -E compare_files uses strict comparison.
    # We'll rely on copy success + cmake -E explicit check?
    # Simple check: cmake script
    COMMAND ${Python3_EXECUTABLE} -c "import os, sys; sys.exit(0 if os.path.exists('${CMAKE_BINARY_DIR}/bin/assets/ide/treesitter/squirrel/queries/highlights.scm') else 1)"
    COMMENT "Verifying IDE assets are staged..."
    VERBATIM
)

# Install Resources
install(DIRECTORY samples DESTINATION .)
install(DIRECTORY assets DESTINATION .)
install(FILES LICENSE DESTINATION .)
install(FILES README.md DESTINATION .)

# CPack Packaging
set(CPACK_PACKAGE_NAME "ARCANEE")
set(CPACK_PACKAGE_VENDOR "Michele Fabbri")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Modern Fantasy Console Runtime")
set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/mfabbri77/ARCANEE")
set(CPACK_PACKAGE_CONTACT "michele.fabbri@example.com")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "1")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")

# Generator configuration
if(WIN32)
    set(CPACK_GENERATOR "ZIP")
else()
    set(CPACK_GENERATOR "TGZ")
endif()

include(CPack)

